crates/thread_aware_macros_impl/tests/snapshots/derive__phantom_ref_bounds_the_reference_not_the_parameter.snap
---
source: crates/thread_aware_macros_impl/tests/derive.rs
expression: expand(input)
---
impl<'a, T: 'a> ::thread_aware::ThreadAware for PhantomRef<'a, T>
where
    &'a T: ::core::marker::Send,
{
    fn relocate(
        &mut self,
        source: Option<::thread_aware::affinity::Affinity>,
        destination: ::thread_aware::affinity::Affinity,
    ) {}
}
