crates/thread_aware_macros_impl/tests/snapshots/derive__phantom_ref_generic_gets_send_bound.snap
---
source: crates/thread_aware_macros_impl/tests/derive.rs
expression: expand(input)
---
impl<T: ::core::marker::Send> ::thread_aware::ThreadAware for PhantomRef<T> {
    fn relocate(
        &mut self,
        source: Option<::thread_aware::affinity::Affinity>,
        destination: ::thread_aware::affinity::Affinity,
    ) {}
}
