crates/thread_aware_macros_impl/tests/snapshots/derive__phantom_reference_binds_its_parameter.snap
---
source: crates/thread_aware_macros_impl/tests/derive.rs
expression: expand(input)
---
impl<'a, T: 'a + ::thread_aware::ThreadAware> ::thread_aware::ThreadAware
for PhantomRef<'a, T> {
    fn relocate(
        &mut self,
        __thread_aware_source: ::core::option::Option<
            ::thread_aware::affinity::Affinity,
        >,
        __thread_aware_destination: ::thread_aware::affinity::Affinity,
    ) {
        ::thread_aware::ThreadAware::relocate(
            &mut self.0,
            __thread_aware_source,
            __thread_aware_destination,
        );
    }
}
