crates/thread_aware_macros_impl/tests/snapshots/derive__phantom_reference_is_not_reduced_to_its_parameter.snap
---
source: crates/thread_aware_macros_impl/tests/derive.rs
expression: expand(input)
---
impl<'a, T: 'a> ::thread_aware::ThreadAware for PhantomRef<'a, T>
where
    PhantomRef<'a, T>: ::core::marker::Send,
{
    fn relocate(
        &mut self,
        source: Option<::thread_aware::affinity::Affinity>,
        destination: ::thread_aware::affinity::Affinity,
    ) {}
}
