crates/thread_aware_macros_impl/tests/snapshots/derive__phantom_unrelated_trait_named_send_still_gets_predicate.snap
---
source: crates/thread_aware_macros_impl/tests/derive.rs
expression: expand(input)
---
impl<T: local::Send> ::thread_aware::ThreadAware for CustomSend<T>
where
    T: ::core::marker::Send,
{
    fn relocate(
        &mut self,
        source: Option<::thread_aware::affinity::Affinity>,
        destination: ::thread_aware::affinity::Affinity,
    ) {}
}
