crates/thread_aware_macros_impl/tests/snapshots/derive__phantom_without_argument_gets_no_predicate.snap
---
source: crates/thread_aware_macros_impl/tests/derive.rs
expression: expand(input)
---
impl<T: ::thread_aware::ThreadAware> ::thread_aware::ThreadAware for BarePhantom<T> {
    fn relocate(
        &mut self,
        source: Option<::thread_aware::affinity::Affinity>,
        destination: ::thread_aware::affinity::Affinity,
    ) {
        ::thread_aware::ThreadAware::relocate(&mut self.0, source, destination);
        ::thread_aware::ThreadAware::relocate(&mut self.1, source, destination);
    }
}
