crates/thread_aware_macros_impl/tests/snapshots/derive__prebound_bare_thread_aware_is_still_bound.snap
---
source: crates/thread_aware_macros_impl/tests/derive.rs
expression: expand(input)
---
impl<T: ThreadAware + ::thread_aware::ThreadAware> ::thread_aware::ThreadAware
for PreBoundTa<T> {
    fn relocate(
        &mut self,
        source: Option<::thread_aware::affinity::Affinity>,
        destination: ::thread_aware::affinity::Affinity,
    ) {
        ::thread_aware::ThreadAware::relocate(&mut self.0, source, destination);
    }
}
