crates/thread_aware_macros_impl/tests/snapshots/derive__raw_pointer_variance_marker_binds_nothing.snap
---
source: crates/thread_aware_macros_impl/tests/derive.rs
expression: expand(input)
---
impl<T> ::thread_aware::ThreadAware for RawMarker<T> {
    fn relocate(
        &mut self,
        __thread_aware_source: ::core::option::Option<&::thread_aware::Thread>,
        __thread_aware_destination: &::thread_aware::Thread,
    ) {
        ::thread_aware::ThreadAware::relocate(
            &mut self.0,
            __thread_aware_source,
            __thread_aware_destination,
        );
        ::thread_aware::ThreadAware::relocate(
            &mut self.1,
            __thread_aware_source,
            __thread_aware_destination,
        );
    }
}
